test/files/run/class-symbol-contravariant.check

scala> :power
Power mode enabled. :phase is at typer.
import scala.tools.nsc._, intp.global._, definitions._
Try :help or completions for vals._ and power._

scala> val u = rootMirror.universe
u: $r.intp.global.type = <global>

scala> import u._, scala.reflect.internal.Flags
import u._
import scala.reflect.internal.Flags

scala> class C
defined class C

scala> val sym = u.typeOf[C].typeSymbol
<console>:42: error: private value read escapes its defining scope as part of type u.Symbol
       val sym = u.typeOf[C].typeSymbol
           ^

scala> sym.isContravariant
<console>:42: error: not found: value sym
       sym.isContravariant
       ^

scala> sym setFlag Flags.INCONSTRUCTOR
<console>:42: error: not found: value sym
       sym setFlag Flags.INCONSTRUCTOR
       ^

scala> sym.isClassLocalToConstructor
<console>:42: error: not found: value sym
       sym.isClassLocalToConstructor
       ^

scala> sym.isContravariant // was true
<console>:42: error: not found: value sym
       sym.isContravariant // was true
       ^

scala> :quit
